# seazone-challenge-ai-builder-data

./: .gitignore  PR_DESCRIPTION.md  README.md
ai-sessions/: .gitkeep  01-discovery.md  02-pipeline.md  03-entrega.md
analysis/: pyproject.toml
analysis/output/: answers.json  timing_report.md
analysis/src/itapema_bi/: clean.py  cost.py  load.py  metrics.py  paths.py  roi.py  run.py  timing.py
pipelines/: gold_system_price_itapema.sql  requirements.txt  system_price_v2.py
plano-squad/: 30-60-90.md
reviews/: 01-system-price-v2.md
specs/01-bi-itapema/: plan.md  spec.md
specs/02-inteligencia-brasil/: constitution.md  plan.md  spec.md
