[project]
name = "itapema-bi"
version = "0.1.0"
description = "Analise de investimento em short-stay em Itapema (SC) - desafio Seazone AI Builder, Parte 1"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "polars-lts-cpu>=1.33.1",
    "psutil>=7.2.2",
    "pyarrow>=24.0.0",
]

[project.scripts]
itapema-bi = "itapema_bi.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/itapema_bi"]
